fix logo on mobile

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -25,5 +25,8 @@
   .teampic {
     max-width: 70%;
   }
+  .logo {
+    margin-left: -100px;
+  }
 }
 
