--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -2653,7 +2653,7 @@ form#newsletter input[type=submit] {
 	}
 
 	header {
-		padding: 0px 20px !important;
+		padding: 0px 0px !important;
 	}
 
 	#wrapper,
